// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linePadding renders 0 1`] = `
Array [
  .c0 {
  line-padding: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: 0;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`linePadding renders function 1`] = `
Array [
  .c0 {
  line-padding: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: has;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: has;
}

<div
    className="c0"
  />,
]
`;

exports[`linePadding renders invalid theme path 1`] = `
Array [
  .c0 {
  line-padding: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`linePadding renders negative number 1`] = `
Array [
  .c0 {
  line-padding: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`linePadding renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  line-padding: July;
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-padding: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  line-padding: July;
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-padding: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  line-padding: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-padding: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-padding: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-padding: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-padding: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`linePadding renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    line-padding: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-padding: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    line-padding: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-padding: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-padding: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-padding: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    line-padding: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    line-padding: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    line-padding: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`linePadding renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  line-padding: July;
}

@media May {
  .c0 {
    line-padding: August;
  }
}

@media April {
  .c0 {
    line-padding: September;
  }
}

@media January {
  .c0 {
    line-padding: November;
  }
}

@media April {
  .c0 {
    line-padding: August;
  }
}

@media June {
  .c0 {
    line-padding: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  line-padding: July;
}

@media May {
  .c0 {
    line-padding: August;
  }
}

@media April {
  .c0 {
    line-padding: September;
  }
}

@media January {
  .c0 {
    line-padding: November;
  }
}

@media April {
  .c0 {
    line-padding: August;
  }
}

@media June {
  .c0 {
    line-padding: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  line-padding: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-padding: November;
  }
}

@media April {
  .c0 {
    line-padding: January;
  }
}

@media January {
  .c0 {
    line-padding: December;
  }
}

@media April {
  .c0 {
    line-padding: April;
  }
}

@media June {
  .c0 {
    line-padding: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-padding: November;
  }
}

@media April {
  .c0 {
    line-padding: January;
  }
}

@media January {
  .c0 {
    line-padding: December;
  }
}

@media April {
  .c0 {
    line-padding: April;
  }
}

@media June {
  .c0 {
    line-padding: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`linePadding renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    line-padding: July;
  }
}

@media April {
  .c0 {
    line-padding: August;
  }
}

@media January {
  .c0 {
    line-padding: September;
  }
}

@media April {
  .c0 {
    line-padding: November;
  }
}

@media June {
  .c0 {
    line-padding: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    line-padding: July;
  }
}

@media April {
  .c0 {
    line-padding: August;
  }
}

@media January {
  .c0 {
    line-padding: September;
  }
}

@media April {
  .c0 {
    line-padding: November;
  }
}

@media June {
  .c0 {
    line-padding: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-padding: January;
  }
}

@media April {
  .c0 {
    line-padding: December;
  }
}

@media January {
  .c0 {
    line-padding: April;
  }
}

@media April {
  .c0 {
    line-padding: May;
  }
}

@media June {
  .c0 {
    line-padding: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    line-padding: January;
  }
}

@media April {
  .c0 {
    line-padding: December;
  }
}

@media January {
  .c0 {
    line-padding: April;
  }
}

@media April {
  .c0 {
    line-padding: May;
  }
}

@media June {
  .c0 {
    line-padding: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`linePadding renders postitive number 1`] = `
Array [
  .c0 {
  line-padding: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`linePadding renders string 1`] = `
Array [
  .c0 {
  line-padding: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: July;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: June;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: June;
}

<div
    className="c0"
  />,
]
`;

exports[`linePadding renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`linePadding renders valid theme path 1`] = `
Array [
  .c0 {
  line-padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  line-padding: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
